--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "github-page",
   "version": "0.1.0",
+  "homepage": "github-page/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
